--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "set PORT=8008 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watch",
-    "test:coverage": "react-scripts test --coverage",
+    "test:coverage": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
